:bug: fix: Solved emory leak in Categorical DQN